# forced-alignment-rs

./: Cargo.toml  README.md  notes.md  overview.md  plan.md  report.md
align-report-eval/: eval.md  short-sentence-added-at-the-end.json
src/: align.rs  audio.rs  ctc.rs  lib.rs  main.rs  model.rs  output.rs  transcript.rs
validation-samples/: README.md
