[package]
name = "forced-alignment"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
hf-hub = "0.5"
tokenizers = "0.23"
symphonia = { version = "0.5", features = ["mp3"] }
rubato = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
