[package]
name = "forced-alignment"
version = "0.2.2"
edition = "2024"

[lib]
name = "forced_alignment"
path = "src/lib.rs"

[[bin]]
name = "forced-alignment"
path = "src/main.rs"

[features]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
anyhow = "1"
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
clap = { version = "4", features = ["derive"] }
hf-hub = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.23"

# pin symphonia & rubato to 0.5 and 0.16
# Both symphonia 0.6 & rubato 3.0 are very recent rewrites with
# substantially different APIs
# (no SampleBuffer, no SincFixedIn at top level, etc.)
symphonia = { version = "0.5", features = ["mp3"] }
rubato = "0.16"
unicode-segmentation = "1"


